update daily news

--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
             <p>https://skydev167.github.io/SkyWeb/</p>
             <br>
             <h3>Document de la semaine</h3>
-            <p>Lorem Ipsum est simplement un texte factice de l'industrie de l'impression et de la composition. Lorem Ipsum est le texte factice standard de l'industrie depuis les annees 1500, quand un imprimeur inconnu a pris une galere de type et l'a brouille pour en faire un cahier de caracteres. Il a survecu non seulement a cinq siecles, mais aussi au saut dans la composition electronique, demeurant essentiellement inchange.</p>
+            <p>Le codage en binaire n'est pas suffisant pour représenter de l'information dans un ordinateur. Il est également nécessaire de définir des formats. Un format décrit la façon de coder l'information, par exemple le fait que l'on va associer le nombre 65 à la lettre A est défini par le format ASCII.
+
+Dans le machine, l'information est stockée sous forme de fichiers. Ces fichiers ont donc un format qui permet de définir comment les utiliser. Il existe une grande variété de formats de fichiers, par exemple :
+
+    pour l'audio : MP3 ou FLAC,
+
+    pour le texte : DOC ou ODT,
+
+    pour la vidéo : MP4 ou AVI.</p>
             <br>
 
      </body>
