--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
             <li>C'est vraiment HTML!!!Serieux!<br></li>
             <p>Donc...Tu fais quoi?</p></li>
             <p><img src="https://media.giphy.com/media/lpHQvZu6stHKo/giphy.gif"></p>
-            <p>GitHub version:</p>
-            <p>https://skydev167.github.io/SkyWeb/</p>
+            <p>Lien youtube:</p>
+            <form action="https://www.youtube.com/">
+		  <button type="submit">Youtube</button>
+            </form>
             <br>
             <h3>Document de la semaine</h3>
             <p>Le codage en binaire n'est pas suffisant pour représenter de l'information dans un ordinateur. Il est également nécessaire de définir des formats. Un format décrit la façon de coder l'information, par exemple le fait que l'on va associer le nombre 65 à la lettre A est défini par le format ASCII.
