--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
      
     <body>
         <h1>Sky_Dev est le boss ici!</h1>
-        <h2>Bienvenue sur le SkyOverWeb!</h2> 
+         <a href=partie2>Partie 2</a>
+         <h2>Bienvenue sur le SkyOverWeb!</h2> 
         <link rel="stylesheet" href="style.css">
         <h4>Le code HTML c'est bien! Mais pourquoi?</h4>
         <ul>
