--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     </head>
      
     <body>
-        <a href=partie2>Partie 2</a>
+         <ul>
+              <a href=partie2>Partie 2</a></ul>
          <div id="carte">
         <h1>Sky_Dev est le boss ici!</h1>
          <h2>Bienvenue sur le SkyOverWeb!</h2> 
