i think you know what im doing

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      
     <body>
          <ul>
-              <a href=partie2>Partie 2</a></ul>
+              <li><a href=partie2>Partie 2</a></li></ul>
          <div id="carte">
         <h1>Sky_Dev est le boss ici!</h1>
          <h2>Bienvenue sur le SkyOverWeb!</h2> 
