--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
      
     <body>
          <ul>
-              <li><a href=partie2>Partie 2</a></li></ul>
+              <li><a href=partie2.html>Partie 2</a></li>
+         <li><a href=index.html>Menu</a></li></ul>
          <div id="carte">
         <h1>Sky_Dev est le boss ici!</h1>
          <h2>Bienvenue sur le SkyOverWeb!</h2> 
