--- a/partie2.html
+++ b/partie2.html
@@ -16,3 +16,4 @@
          <div id="carte">
            <h1>C'est la partie 2 du SkyOverWeb</h1>
            <h2>TRAVAUX EN COURS</h2>
+              <link rel="stylesheet" href="style.css">
