--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
          <ul>
               <li><a href=partie2.html>Partie 2</a></li>
          <li><a href=index.html>Menu</a></li>
-         <li>Rien ici</li></ul>
+         <li>Rien ici à part ça  /\
+  I I
+  I I
+\--/
+  I I
+  I I</li></ul>
          <div id="carte">
         <h1>Sky_Dev est le boss ici!</h1>
          <h2>Bienvenue sur le SkyOverWeb!</h2> 
