--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   I I</li></ul>
          <div id="carte">
         <h1>Sky_Dev est le boss ici!</h1>
-         <h2>Bienvenue sur le SkyOverWeb!</h2> 
+         <h2>Bienvenue sur le SkyOverWeb!</h2>
+         <Link rel = "StyleSheet" href = "style.css" type = "text / css" />     
         <h4>Le code HTML c'est bien! Mais pourquoi?</h4>
         <ul>
             <li>C'est vraiment cool!!!Serieux!</li>
