--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
          <ul>
               <li><a href=partie2.html>Partie 2</a></li>
          <li><a href=index.html>Menu</a></li>
-         <li>Rien ici à part ça  /\
+         <li><a href=https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjyj4SE4rH2AhUPyYUKHa6oBC4QwqsBegQIAxAB&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DdQw4w9WgXcQ&usg=AOvVaw0aHtehaphMhOCAkCydRLZU>Rien ici à part ça  /\
   I I
   I I
 \--/
   I I
-  I I</li></ul>
+  I I</a></li></ul>
          <div id="carte">
         <h1>Sky_Dev est le boss ici!</h1>
          <h2>Bienvenue sur le SkyOverWeb!</h2>
