--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
             <form action="https://www.youtube.com/">
           <button type="submit">Youtube</button>
             <br>
+            <div class="tenor-gif-embed" data-postid="24185035" data-share-method="host" data-aspect-ratio="1.18519" data-width="100%"><a href="https://tenor.com/view/amogus-amogustwerk-amongus-amongustwerk-stick-man-gif-24185035">Amogus Amogustwerk Sticker</a>from <a href="https://tenor.com/search/amogus-stickers">Amogus Stickers</a></div> 
+                 <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
             <h3>Document de la semaine</h3>
             <p>Lorem Ipsum est simplement un texte factice de l'industrie de l'impression et de la composition. Lorem Ipsum est le texte factice standard de l'industrie depuis les annees 1500, quand un imprimeur inconnu a pris une galere de type et l'a brouille pour en faire un cahier de caracteres. Il a survecu non seulement a cinq siecles, mais aussi au saut dans la composition electronique, demeurant essentiellement inchange.
             </p>
