--- a/index.html
+++ b/index.html
@@ -30,10 +30,8 @@
             <form action="https://www.youtube.com/">
           <button type="submit">Youtube</button>
             <br>
-            <div class="tenor-gif-embed" data-postid="24185035" data-share-method="host" data-aspect-ratio="1.18519" data-width="100%"><a href="https://tenor.com/view/amogus-amogustwerk-amongus-amongustwerk-stick-man-gif-24185035">Amogus Amogustwerk Sticker</a>from <a href="https://tenor.com/search/amogus-stickers">Amogus Stickers</a></div> 
-                 <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
             <h3>Document de la semaine</h3>
-            <p>Lorem Ipsum est simplement un texte factice de l'industrie de l'impression et de la composition. Lorem Ipsum est le texte factice standard de l'industrie depuis les annees 1500, quand un imprimeur inconnu a pris une galere de type et l'a brouille pour en faire un cahier de caracteres. Il a survecu non seulement a cinq siecles, mais aussi au saut dans la composition electronique, demeurant essentiellement inchange.
+            <p>De même que HTML est utilisé pour définir les diverses parties indépendantes d'une page (comme un « paragraphe » ou une « image »), HTML l'est pour définir des zones de votre site web (comme l'« en‑tête », le « menu de navigation », le « contenu principal », etc.). Cet article détaille la structure d'un site simple et l'écriture du HTML correspondant.
             </p>
             <br><textarea cols="50" rows="2" wrap="hard" disabled="yes" readonly="yes">Zone de commentaires (En Travaux)</textarea>
             <br>
