--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
          <ul>
               <li><a href=partie2.html>Partie 2</a></li>
          <li><a href=index.html>Menu</a></li>
-         <li><a href=https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjyj4SE4rH2AhUPyYUKHa6oBC4QwqsBegQIAxAB&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DdQw4w9WgXcQ&usg=AOvVaw0aHtehaphMhOCAkCydRLZU></a>Ne pas cliquer lol</li></ul>
+         <li><a href=https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjyj4SE4rH2AhUPyYUKHa6oBC4QwqsBegQIAxAB&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DdQw4w9WgXcQ&usg=AOvVaw0aHtehaphMhOCAkCydRLZU>Ne pas cliquer lol</a></li></ul>
          <div id="carte">
         <h1>Sky_Dev est le boss ici!</h1>
          <h2>Bienvenue sur le SkyOverWeb!</h2>
