--- a/partie2.html
+++ b/partie2.html
@@ -15,5 +15,5 @@
          <li><a href=index.html>Menu</a></li></ul>
          <div id="carte">
            <h1>C'est la partie 2 du SkyOverWeb</h1>
-           <h2>TRAVAUX EN COURS</h2>
+           <h2>Éxaify</h2>
       
