--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
          <ul>
               <li><a href=partie2.html>Partie 2</a></li>
-              <li><a href=code/JS.html>Test JS</a></li>
+              <li><a href=/code/JS.htm>Test JS</a></li>
          <li><a href=index.html>Menu</a></li>
          <li><a href=https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjyj4SE4rH2AhUPyYUKHa6oBC4QwqsBegQIAxAB&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DdQw4w9WgXcQ&usg=AOvVaw0aHtehaphMhOCAkCydRLZU>Ne pas cliquer lol</a></li></ul>
          <div id="carte">
