--- a/JS.html
+++ b/JS.html
@@ -3,7 +3,7 @@
     <head>
         <title>Test</title>
     </head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
     <body>
         <h1>Test JS</h1>
         <h2>Ceci est un test JavaScript!!!</h2>
