--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
             <br><textarea cols="50" rows="2" wrap="hard" disabled="yes" readonly="yes">Zone de commentaires (En Travaux)</textarea>
             <br>
             <textarea cols="50" rows="10" wrap="hard"></textarea>
+            <script runOnKeys(
+  () => alert("Hello!"),
+  "KeyQ",
+  "KeyW"
+                 );></script>
      </body>
 
 
