--- a/partie2.html
+++ b/partie2.html
@@ -12,7 +12,7 @@
     <body>
          <ul>
               <li><a href=partie2.html>Partie 2</a></li>
-               <li><a href=admin.html>ADMIN ACCESS</a></li>
+               <li><a href=admin/admin.html>ADMIN ACCESS</a></li>
          <li><a href=index.html>Menu</a></li></ul>
          <div id="carte">
            <h1>C'est la partie 2 du SkyOverWeb</h1>
