--- a/partie2.html
+++ b/partie2.html
@@ -12,9 +12,10 @@
     <body>
          <ul>
               <li><a href=partie2.html>Partie 2</a></li>
-               <li><a href=admin/admin.html>ADMIN ACCESS</a></li>
+               <li><a href=admin.html>ADMIN ACCESS</a></li>
          <li><a href=index.html>Menu</a></li></ul>
          <div id="carte">
-           <h1>C'est la partie 2 du SkyOverWeb</h1>
+           <h1>C'est la partie 2 du SkyOverWeb</h1>*
+              <iframe width="1000" height="500" src="https://www.youtube.com/embed/jd9bzsyhbr8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
              
       
